# FeastOn

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  QUICKSTART.md  README.md  verify.sh
backend/: README.md  pyproject.toml  run.py
backend/conflang_backend/: __init__.py  config.py  main.py
backend/conflang_backend/providers/: __init__.py  identity_provider.py  llm_provider.py  persistence_provider.py
backend/conflang_backend/routes/: analyze.py  health.py  talks.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/providers/: IdentityContext.tsx  PersistenceContext.tsx
pipeline/: README.md  pyproject.toml
pipeline/conflang_pipeline/: __init__.py  cli.py  manifest.py  talk_url.py
pipeline/conflang_pipeline/providers/: __init__.py  alignment_provider.py  audio_provider.py  church_content_provider.py  content_provider.py  llm_provider.py  persistence_provider.py  transcription_provider.py
pipeline/conflang_pipeline/stages/: __init__.py  ingest.py  transcribe.py
pipeline/tests/: conftest.py  test_providers.py  test_transcribe.py
specs/: BACKEND.md  FRONTEND.md  PIPELINE.md
